..F....... [ZBX-5180] maintenance periods form redesign (Vedmak)
.......PS. [ZBXNEXT-1335] pingers work without connection to a database (Sasha)
..F....... [ZBX-5127] regular expressions form redesign (Vedmak)
........S. [ZBXNEXT-1663] added support for notification macros {TRIGGER.NAME.ORIG}, {ITEM.NAME.ORIG}, {ITEM.KEY.ORIG} (dimir)

Bug fixes:
A.F....... [ZBX-6362] fixed proxy interface array structure (Eduard)
..F.I..... [ZBX-6645] suppressed PHP error messages for DB connection tests in installation wizard step 3 (Ivo)
..F....... [ZBXNEXT-484] fixed displaying data and triggers in monitoring overview page if no applications defined (Ivo)
A.F....... [ZBX-6429] fixed Monitoring -> Events filter clearing and events acknowledging (Eduard, Oleg, Toms)
..F....... [ZBX-6648] improved trigger filter popup - shows hosts and groups that are enabled and have monitored triggers (Ivo)
..F....... [ZBXNEXT-1682] added negative number validation for "New flexible interval" field (Ivo)
..F....... [ZBX-6459] improved localization in maintenance (Ivo)
..F....... [ZBX-6748] fixed event filter period resetting (Ivo)
..F....... [ZBX-6693] improved groups and hosts filter in available report, slide shows and screen monitoring pages (Eduard)
..F....... [ZBX-6662] fixed acknowledged message count for problem events in dashboard "system status" block (Eduard)
..F....... [ZBX-6471] fixed action operations step ordering (Ivo)
A......... [ZBX-6361] fixed proxy interface creating through Proxy API (Eduard)
A......... [ZBX-6651] fixed template name for duplicate items in validation message (Eduard)
..F....... [ZBX-6268] removed links from inactive subfilter items in item list (Eduard)
A......... [ZBX-6446] removed unused getObjects() method from Script API (Eduard)
..F....... [ZBX-6710] fixed item list display after item deletion (Ivo)
..F....... [ZBX-6718] fixed "placeholder" attribute for IE9 (Ivo)
A......... [ZBX-6399] fixed map element linking (Eduard)