@@ -424,6 +424,7 @@ $options = array(
 	'selectHosts' => array('hostid', 'name', 'maintenance_status', 'maintenance_type', 'maintenanceid', 'description'),
 	'selectItems' => API_OUTPUT_EXTEND,
 	'selectDependencies' => API_OUTPUT_EXTEND,
+	'selectLastEvent' => true,
 	'expandDescription' => true,
 	'preservekeys' => true
 );
@@ -730,11 +731,26 @@ foreach ($triggers as $trigger) {
 	if ($config['event_ack_enable']) {
 		if ($trigger['hasEvents']) {
 			if ($trigger['event_count']) {
-				$ackColumn = new CCol(array(new CLink(_('Acknowledge'), 'acknow.php?triggers[]='.$trigger['triggerid'].'&backurl='
-					.$page['file'], 'on'), ' ('.$trigger['event_count'].')'));
+				$ackColumn = new CCol(array(
+					new CLink(
+						_('Acknowledge'),
+						'acknow.php?'.
+							'triggers[]='.$trigger['triggerid'].
+							'&backurl='.$page['file'],
+						'on'
+					), ' ('.$trigger['event_count'].')'
+				));
 			}
 			else {
-				$ackColumn = new CCol(_('Acknowledged'), 'off');
+				$ackColumn = new CCol(
+					new CLink(
+						_('Acknowledged'),
+						'acknow.php?'.
+							'eventid='.$trigger['lastEvent']['eventid'].
+							'&triggerid='.$trigger['lastEvent']['objectid'].
+							'&backurl='.$page['file'],
+						'off'
+				));
 			}
 		}
 		else {
